[gd_scene load_steps=7 format=3 uid="uid://bjipsqfegx0er"]

[ext_resource type="Script" path="res://Actors/Bullet3d/Bullet3d.gd" id="1_5fudd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kwhx8"]
radius = 0.0346906
height = 0.198039

[sub_resource type="Gradient" id="Gradient_wikvu"]
colors = PackedColorArray(0.102089, 0.639354, 5.77569e-07, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_onogb"]
gradient = SubResource("Gradient_wikvu")
width = 16
height = 4

[sub_resource type="Gradient" id="Gradient_b8b8v"]
offsets = PackedFloat32Array(0, 0.623656)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0h22u"]
gradient = SubResource("Gradient_b8b8v")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Bullet" type="Area3D"]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_5fudd")

[node name="CollisionShape2D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.0438576, 6.09903, 0, -6.09903, 0.0438576, 0, 0, 0, 6.09919, 0, 0, 0)
shape = SubResource("CapsuleShape3D_kwhx8")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(6.09919, 0, 0, 0, 6.09919, 0, 0, 0, 6.09919, 0, 0, 0)
axis = 1
texture = SubResource("GradientTexture2D_onogb")

[node name="VisibileNotifier" type="VisibleOnScreenNotifier3D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]

[node name="Glow" type="Sprite3D" parent="."]
visible = false
billboard = 1
texture = SubResource("GradientTexture2D_0h22u")

[connection signal="screen_exited" from="VisibileNotifier" to="." method="_on_visibile_notifier_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
